# idis

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTORS.txt  LICENSE  Makefile  README.rst  cycle_docker_compose.sh  docker-compose.yml  make_build.sh  manage.py  package.json  pyproject.toml  pytest.ini  run_pytest.sh  set_commit_env.sh  setup.cfg
.github/workflows/: ci.yml
.idea - Copy/: modules.xml  workspace.xml
.idea - Copy/runConfigurations/: merge_production_dotenvs_in_dotenv.xml  migrate__env.xml  runserver__env.xml  runserver_plus.xml
app/: manage.py  pytest.ini
app/config/: celery.py  settings.py  urls.py  wsgi.py
app/config/settings/: base.py  local.py  test.py
app/config/settings_old/: base.py  local.py  production.py  test.py
app/idis/: __init__.py
app/idis/api/: swagger.py  urls.py
app/idis/core/: models.py
app/idis/jobs/: admin.py  ctp.py  filehandling.py  models.py  tasks.py  urls.py  views.py
app/idis/pipeline/: admin.py  models.py  tasks.py
app/idis/profiles/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
app/idis/users/: admin.py  (+2 more)
app/tests/: conftest.py  factories.py  settings.py
config/: urls.py  wsgi.py
config/settings/: base.py  production.py
dockerfiles/http/: nginx.conf.template
dockerfiles/web/: Dockerfile
docs/: Makefile  conf.py  deploy.rst  environment.yml  for_developers.rst  getting_started.rst  index.rst  installation.rst  make.bat  settings.rst
docs/pycharm/: configuration.rst
idis/: conftest.py
idis/templates/: base.html
idis/users/: admin.py
requirements/: base.txt  local.txt  test.txt
(+32 files in other folders)
